<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.numberstrivia.viewmodel.RandomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/randombackground"
        tools:context=".view.RandomFragment">

        <TextView
            android:id="@+id/random_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="1.2"
            android:shadowDy="1.4"
            android:shadowRadius="1.6"
            android:text="@string/randomTextView"
            android:textColor="@color/dirtyOrange"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_display"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@{viewModel.randomResults.text}"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/layout_linear"
            app:layout_constraintTop_toBottomOf="@+id/random_textView" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="@{viewModel.loadingProgress ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/text_display"
            app:layout_constraintEnd_toEndOf="@id/text_display"
            app:layout_constraintStart_toStartOf="@id/text_display"
            app:layout_constraintTop_toTopOf="@id/text_display" />

        <LinearLayout
            android:id="@+id/layout_linear"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <GridLayout
                android:id="@+id/layout_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.985">

                <Button
                    android:id="@+id/button_random_trivia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/randomTriviaButton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_random_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/randomYearButton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_random_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/randomDateButton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_random_math"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/randomMathButton"
                    android:textStyle="bold" />

            </GridLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>